trying to create the osc bridge

--- a/Projected_Realities/index.html
+++ b/Projected_Realities/index.html
@@ -14,7 +14,10 @@
   <!-- ml5 second -->
   <script src="https://unpkg.com/ml5@0.12.2/dist/ml5.min.js"></script>
 
+  <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/osc-js@2.4.1/lib/osc.min.js"></script> -->
+
   <!-- Your project scripts -->
+  <script src="js/bridge_osc.js"></script>
   <script src="js/Character.js"></script>
   <script src="js/GameScene.js"></script>
   <script src="js/script.js"></script>
