did it,  max sends osc messages back and now we are able to read them and character is animated
character can now move base on the pose training that i do with posenet and flucoma max. i also scaled down the character and added actual movement. size down character and also framerate. will want to to add building blocking but i have the edge of the world blocking at the moment. need to do the actual training to see how it goes. also added changes in the server_osc to make sure that everytime i open it it destroys past sessions or anything that is listening on the post 8081.

--- a/Projected_Realities/display.html
+++ b/Projected_Realities/display.html
@@ -6,6 +6,8 @@
     <title>Character Projection</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
     <script src="js/Character.js"></script>
+
+
 </head>
 
 <body>
@@ -19,21 +21,33 @@
 
             socket = new WebSocket("ws://localhost:8081");
             socket.onopen = () => console.log("✅ Connected to OSC bridge");
+
             socket.onmessage = (event) => {
                 const data = JSON.parse(event.data);
-                if (data.address === "/poseLabel") {
+
+                if (data.address === "/predictpoint" || data.address === "predictpoint") {
                     poseLabel = data.args[0];
+                    console.log("🎯 Prediction received:", poseLabel);
                     myCharacter.changePose(poseLabel);
                 }
+
+
+
+                // if (data.address === "/predictpoint") {
+                //     poseLabel = data.args[0];
+                //     myCharacter.changePose(poseLabel);
+                // }
             };
         }
 
         function draw() {
             background(0);
-            myCharacter.update();
+            myCharacter.update(poseLabel);
             myCharacter.display();
         }
     </script>
+
+
 </body>
 
 </html>
