--- a/Projected_Realities/display.html
+++ b/Projected_Realities/display.html
@@ -6,8 +6,6 @@
     <title>Character Projection</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
     <script src="js/Character.js"></script>
-
-
 </head>
 
 <body>
@@ -21,33 +19,21 @@
 
             socket = new WebSocket("ws://localhost:8081");
             socket.onopen = () => console.log("✅ Connected to OSC bridge");
-
             socket.onmessage = (event) => {
                 const data = JSON.parse(event.data);
-
-                if (data.address === "/predictpoint" || data.address === "predictpoint") {
+                if (data.address === "/poseLabel") {
                     poseLabel = data.args[0];
-                    console.log("🎯 Prediction received:", poseLabel);
                     myCharacter.changePose(poseLabel);
                 }
-
-
-
-                // if (data.address === "/predictpoint") {
-                //     poseLabel = data.args[0];
-                //     myCharacter.changePose(poseLabel);
-                // }
             };
         }
 
         function draw() {
             background(0);
-            myCharacter.update(poseLabel);
+            myCharacter.update();
             myCharacter.display();
         }
     </script>
-
-
 </body>
 
 </html>
