--- a/Projected_Realities/index.html
+++ b/Projected_Realities/index.html
@@ -3,28 +3,27 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Projected Realities</title>
 
-  <!-- CSS stylesheet(s) -->
+  <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/style.css" />
-  <!-- p5 first -->
+
+  <!-- P5.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
 
-  <!-- ml5 second -->
+  <!-- ML5.js -->
   <script src="https://unpkg.com/ml5@0.12.2/dist/ml5.min.js"></script>
+  <!-- MediaPipe -->
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.js"></script>
 
-
+  <!-- OSC bridge -->
   <script src="js/bridge_osc.js"></script>
+
+  <!-- Your main script -->
   <script src="js/script.js"></script>
-
-  <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/osc-js@2.4.1/lib/osc.min.js"></script> -->
-
-  <!-- Your project scripts
-  
-  <script src="js/Character.js"></script>
-  <script src="js/GameScene.js"></script>
-  -->
 
   <style>
     body {
@@ -41,7 +40,8 @@
 </head>
 
 <body>
-  <!-- (optional: HTML UI elements like buttons or sliders can go here) -->
+  <video class="input_video" style="display:none;"></video>
+  <canvas class="output_canvas" width="1280" height="720"></canvas>
 </body>
 
 </html>
